# admixture

./: .gitignore  .makim.yaml  .pre-commit-config.yaml  .releaserc.json  AGENTS.md  LICENSE  README.md  conda.yaml  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yaml  main.yaml  release.yaml
conda/: dev-linux.yaml  dev-macos.yaml  dev-win.yaml
docs/: README.md  _quarto.yml  api.qmd  development.qmd  index.qmd  installation.qmd  styles.css  troubleshooting.qmd  usage.qmd
docs/tutorials/: first-analysis.qmd  index.qmd  malariagen-data.qmd
src/admixture/: __init__.py  _version.py  cli.py  exceptions.py  julia_env.py  parsing.py  result.py  runner.py  setup.py  validation.py
src/admixture/julia/: run_openadmixture.jl
src/admixture/julia-env/: Manifest.toml  Project.toml
tests/: conftest.py  test_cli.py  test_integration_openadmixture.py  test_julia_env.py  test_malariagen_data_runtime.py  test_openadmixture_runtime.py  test_parsing.py  test_result.py  test_runner_command.py  test_runner_edges.py  test_runner_mocked.py  test_setup.py  test_validation.py  test_version_info.py
tests/data/tiny-plink/: tiny.bed  tiny.bim  tiny.fam
