[project]
name = "admixture"
version = "0.1.0"  # semantic-release
description = "Python wrapper around OpenADMIXTURE.jl"
readme = "README.md"
authors = [
  {name = "Ivan Ogasawara", email = "ivan.ogasawara@gmail.com"}
]
license = "BSD-3-Clause"
requires-python = ">=3.10,<4"
dependencies = [
  "numpy >=1.26",
  "pandas >=2.0",
  "packaging >=23",
  "typeguard >=4.5.1",
]

[project.scripts]
admixture-setup = "admixture.cli:setup_main"


[build-system]
requires = ["poetry-core>=2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
exclude = [
  ".git/*",
  ".env*",
]
packages = [
  {include = "admixture", from = "src"},
]
include = [
  "src/admixture/py.typed",
  "src/admixture/julia/*.jl",
]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.2"
pytest-cov = ">=4.1.0"
pytest-xdist = ">=3.8.0"
coverage = ">=7.2.7"
pre-commit = ">=3.3.2"
ruff = ">=0.9.5"
mypy = ">=1.6.0"
bandit = ">=1.7.5"
vulture = ">=2.9.1"
mccabe = ">=0.6.1"
ipykernel = ">=6.0.0"
ipython = ">=7.0.0"
quarto-cli = ">=1.9.0"
jupyterlab = ">=4.0.7"
makim = "1.29.0"
nbmake = ">=1.5.3"
douki = ">=0.12.1"
malariagen-data = { version = "*", python = ">=3.10,<3.13" }


[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "error::RuntimeWarning",
]

[tool.bandit]
exclude_dirs = ["tests"]
targets = "./"

[tool.vulture]
exclude = ["tests"]
ignore_decorators = ["abc.abstractmethod"]
ignore_names = []
make_whitelist = true
min_confidence = 80
paths = ["./"]
sort_by_size = true
verbose = false

[tool.ruff]
line-length = 88
force-exclude = true
src = ["./"]
target-version = "py310"
exclude = [
  "docs",
]

[tool.ruff.lint]
ignore = [
  "F811",  # redefined-while-unused
  "PLR0911",  # Too many return statements
  "PLR0912",  # Too many branches
  "PLR0913",  # Too many arguments in a function definition
  "RUF012",  # mutable-class-default
  "PLR0915",  # Too many statements
  "PLR2004",  # Magic values are common in tests and small validators
]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "YTT", # flake8-2020
  "PL",  # PL
  "RUF", # Ruff-specific rules
  "I001", # isort
]
extend-select = [
  "UP006",  # Prefer builtin generics in annotations
  "UP007",  # Prefer | syntax for unions and optionals
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
